package com.example.huffmanproject.interfaces;public interface HuffmanTree {
}
